# webrtt

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/webrtt-edge/: Cargo.toml
crates/webrtt-edge/src/: config.rs  main.rs  registry.rs  server.rs  session.rs  speculation.rs
crates/webrtt-edge/src/pipeline/: mod.rs  mt.rs  stt.rs  tts.rs  vad.rs
crates/webrtt-protocol/: Cargo.toml
crates/webrtt-protocol/src/: codec.rs  error.rs  messages.rs
crates/webrtt-test/: Cargo.toml
crates/webrtt-test/src/: lib.rs
scripts/: test_session.sh
