[package]
name = "webrtt-edge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "webrtt-edge"
path = "src/main.rs"

[dependencies]
webrtt-protocol = { path = "../webrtt-protocol" }

tokio             = { workspace = true }
tokio-stream      = { workspace = true }
futures           = { workspace = true }
tokio-tungstenite = { workspace = true }
tungstenite       = { workspace = true }
serde             = { workspace = true }
serde_bytes       = { workspace = true }
uuid              = { workspace = true }
bytes             = { workspace = true }
reqwest           = { workspace = true }
envy              = { workspace = true }
dotenvy           = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow            = { workspace = true }
serde_json        = "1"
