[package]
name = "webrtt-test"
version = "0.1.0"
edition = "2021"

[dependencies]
webrtt-protocol = { path = "../webrtt-protocol" }

tokio             = { workspace = true }
tokio-tungstenite = { workspace = true }
tungstenite       = { workspace = true }
futures           = { workspace = true }
uuid              = { workspace = true }
anyhow            = { workspace = true }
